# keywiz

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/keywiz-stats/: Cargo.toml
crates/keywiz-stats/src/: lib.rs  session.rs  snapshot.rs
crates/keywiz-stats/src/store/: memory.rs  mod.rs  sqlite.rs
crates/keywiz-stats/src/views/: heat.rs  wpm.rs
crates/keywiz-stats/tests/: bigram_view.rs  keys_view.rs  progression_view.rs  sqlite_contract.rs  usage_view.rs
crates/keywiz-stats/tests/common/: contract.rs  mod.rs
drift/: Cargo.toml  README.md  drift.toml
drift/crates/drift-analyzer/: Cargo.toml
drift/crates/drift-analyzer/src/: aggregate.rs  analyzer.rs  config.rs  lib.rs  pipeline.rs  registry.rs
drift/crates/drift-analyzers/: Cargo.toml
drift/crates/drift-analyzers/src/: alternate.rs  async_hand_drift.rs  extension_cascade.rs  finger_load.rs  finger_util.rs  flexion_cascade.rs  hand_territory.rs  inward_roll.rs  lib.rs  onehand.rs  outward_roll.rs  redirect.rs  roll.rs  row_cascade.rs  row_distribution.rs  row_util.rs  same_row_skip.rs  same_row_skip_fingerpair.rs  scissor.rs  sfb.rs  sfs.rs  stretch.rs  terminal_penalty.rs  trigram_util.rs
drift/crates/drift-cli/: Cargo.toml
drift/crates/drift-cli/src/: commands.rs  lib.rs  main.rs
drift/crates/drift-config/: Cargo.toml
drift/crates/drift-config/presets/: drifter.toml  extension.toml  neutral.toml  oxey_mimic.toml
drift/crates/drift-config/src/: lib.rs  overrides.rs  presets.rs  toml_value.rs
drift/crates/drift-core/: Cargo.toml
drift/crates/drift-core/src/: corpus.rs  finger.rs  hit.rs  key.rs  keyboard.rs  layout.rs  lib.rs  row.rs  scope.rs  window.rs
drift/crates/drift-corpus/: Cargo.toml
drift/crates/drift-corpus/src/: derive.rs  lib.rs  memory.rs  oxey.rs
drift/crates/drift-delta/: Cargo.toml
drift/crates/drift-delta/src/: lib.rs
drift/crates/drift-delta/tests/: delta_matches_full.rs
drift/crates/drift-dof/: Cargo.toml
drift/crates/drift-dof/src/: board.rs  layout.rs  lib.rs  parse.rs
drift/crates/drift-generate/: Cargo.toml
drift/crates/drift-generate/src/: lib.rs
drift/crates/drift-keyboard/: Cargo.toml
drift/crates/drift-keyboard/src/: keyboard.rs  layout.rs  lib.rs  writer.rs
drift/crates/drift-motion/: Cargo.toml
drift/crates/drift-motion/src/: asymmetric.rs  cross_row.rs  lib.rs  roll.rs
drift/crates/drift-report/: Cargo.toml
drift/crates/drift-report/src/: aggregate.rs  json.rs  lib.rs  text.rs
drift/crates/drift-report/src/diff/: compute.rs  json.rs  mod.rs  text.rs
drift/crates/drift-score/: Cargo.toml
drift/crates/drift-score/src/: lib.rs
drift/docs/: ASSUMPTIONS.md  DRIFT_AUDIT.md  HANDOFF.md  MODULARITY_AUDIT.md  ROADMAP.md  STATE_OF_DRIFT.md  WRITING_ANALYZERS.md
drift/src/: cli.rs  config.rs  corpus.rs  delta.rs  generate.rs  keyboard.rs  layout.rs  main.rs  motion.rs  report.rs  score.rs
drift/src/trigram/: config_util.rs  context.rs  mod.rs  registry.rs  rule.rs
drift/src/trigram/rules/: alternate.rs  flexion_cascade.rs  hand_territory.rs  mod.rs  onehand.rs  pinky_terminal.rs  redirect.rs  roll.rs  row_cascade.rs
keyboards/: corne.json  elora.json  ferris.json  halcyon_elora.json  halcyon_elora_v2.json  kyria.json  lily58.json  ortho.json  us_intl.json
keywiz/crates/keywiz-stats/src/: event.rs  facade.rs  hash.rs
keywiz/crates/keywiz-stats/src/store/: memory.rs  mod.rs  sqlite.rs
keywiz/crates/keywiz-stats/src/views/: bigram.rs  keys.rs  mod.rs  progression.rs  rhythm.rs  session_live.rs  usage.rs
keywiz/crates/keywiz-stats/tests/: heat_view.rs  memory_contract.rs  rhythm_view.rs  usage_view.rs
keywiz/crates/keywiz-stats/tests/common/: fixtures.rs
layouts/: canary-elora.json  canary-halcyon_elora.json  canary-halcyon_elora_v2.json  canary-kyria.json  canary.json  colemak-dh.json  colemak.json  drifter.json  dvorak.json  engram.json  gallium-qxjz.json  gallium-v2.json  gallium.json  gallium_v2.kbd  graphite.json  hyperroll.json  isrt.json  qwerty-halcyon_elora.json  qwerty-halcyon_elora_v2.json  qwerty.json  semimak.json  sturdy.json  workman.json
src/: app.rs  config.rs  drill.rs  keybinds.rs  main.rs  prefs.rs  stats_adapter.rs  translate.rs  typing.rs  words.rs  words.txt
src/configreader/: kanata.rs  keyboard.rs  layout.rs  mod.rs
src/engine/: catalog.rs  drill.rs  mod.rs  placement.rs  projector.rs  state.rs  stats_filter.rs  translate.rs  typing.rs
src/exercise/: catalog.rs  drill.rs  mod.rs  text.rs  words.rs
src/grid/: finger.rs  keyboard.rs  layout.rs  manager.rs  mod.rs
src/integrations/: kanata.rs  mod.rs
src/keyboard/: mod.rs
src/keyboard/blocks/: block.rs  colstag.rs  freeform.rs  keyboard.rs  loader.rs  mod.rs  rowstag.rs
src/keyboard/common/: cluster.rs  coords.rs  finger.rs  key.rs  mod.rs
src/layout/: kanata.rs  mod.rs
src/mapping/: loader.rs  mod.rs
src/mode/: drill.rs  mod.rs  select.rs  text.rs  words.rs
src/physical/: mod.rs
src/physical/engine/: cluster.rs  coords.rs  finger.rs  mod.rs
src/physical/keys/: key.rs  keyboard.rs  mod.rs  naming.rs
src/renderer/: mod.rs
src/renderer/desktop/: mod.rs
src/renderer/overlay/: finger.rs  heat.rs  mod.rs  none.rs  usage.rs
src/renderer/terminal/: body.rs  draw.rs  heatmap.rs  help_page.rs  inline_stats.rs  layout.rs  layout_page.rs  mod.rs  naming.rs  placement.rs  stats_page.rs
src/renderer/terminal/stats_page/: layout_view.rs  overview.rs  progression.rs
src/renderer/terminal/view/: mod.rs
src/renderer/webui/: mod.rs
src/stats/: mod.rs  persist.rs  tracker.rs
src/typing/: drill.rs  mod.rs
src/ui/: grid.rs  heatmap.rs  keyboard.rs  mod.rs
src/words/: heated.rs  mod.rs  words.txt
texts/: autumn_trail.txt  on_typing.txt  the_argument.txt  the_bakery.txt  the_cafe.txt  the_cargo.txt  the_clockmaker.txt  the_commit.txt  the_debug.txt  the_garden.txt  the_json.txt  the_library.txt  the_lighthouse.txt  the_move.txt  the_night_sky.txt  the_quick_brown_fox.txt  the_receipt.txt  the_rust.txt  the_storm.txt  the_terminal.txt
