[workspace]
members = [
    "drift/crates/drift-core",
    "drift/crates/drift-analyzer",
    "drift/crates/drift-motion",
    "drift/crates/drift-corpus",
    "drift/crates/drift-keyboard",
    "drift/crates/drift-dof",
    "drift/crates/drift-analyzers",
    "drift/crates/drift-score",
    "drift/crates/drift-delta",
    "drift/crates/drift-generate",
    "drift/crates/drift-config",
    "drift/crates/drift-report",
    "drift/crates/drift-cli",
    "keywiz/crates/keywiz-stats",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kay"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
toml = "0.8"
indexmap = { version = "2.7", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.1"
rand = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[package]
name = "keywiz"
version = "0.1.0"
edition = "2024"
description = "Terminal typing tutor with visual keyboard for custom layouts"
license = "AGPL-3.0"
repository = "https://github.com/kayplicated/keywiz"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
dirs = "5"
drift-cli = { path = "drift/crates/drift-cli" }
keywiz-stats = { path = "keywiz/crates/keywiz-stats" }
anyhow = { workspace = true }
chrono = { workspace = true }
