[package]
name = "drift"
version = "0.1.0"
edition = "2024"
description = "Flexion-aware keyboard layout scorer, tuned for col-stag ergonomics"
authors = ["Kay"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
owo-colors = "4.1"
indexmap = { version = "2.7", features = ["serde"] }
rand = "0.9"
