[package]
name = "drift-cli"
description = "CLI binary for drift"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "drift"
path = "src/main.rs"

[dependencies]
drift-core = { path = "../drift-core" }
drift-analyzer = { path = "../drift-analyzer" }
drift-analyzers = { path = "../drift-analyzers" }
drift-corpus = { path = "../drift-corpus" }
drift-keyboard = { path = "../drift-keyboard" }
drift-dof = { path = "../drift-dof" }
drift-motion = { path = "../drift-motion" }
drift-score = { path = "../drift-score", features = ["serde"] }
drift-delta = { path = "../drift-delta" }
drift-generate = { path = "../drift-generate" }
drift-config = { path = "../drift-config" }
drift-report = { path = "../drift-report" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
