[package]
name = "drift-corpus"
description = "Corpus loaders and blend transforms for drift"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
drift-core = { path = "../drift-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
